[project]
name = "nexusview-package"
version = "0.0.1"
readme = "README.md"
requires-python = ">=3.12"
license = "Apache-2.0"
dependencies = [
    "ensure==1.0.2",
    "py-youtube==1.1.7",
]

[project.optional-dependencies]
dev = [
    "flake8==5.0.4",
    "mkdocs-material>=9.7.6",
    "mypy==0.971",
    "pytest==7.1.3",
    "tox==3.25.1",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
NexusView = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
mypy_path = "src"
ignore_missing_imports = true